Add Junit Test for AddTemplateCommand